# aetheris-client

./: .codespellrc  .gitignore  Cargo.toml  PLAYGROUND.md  README.md  cliff.toml  deny.toml  justfile  release-plz.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  minimal-features.yml  publish.yml  release-plz.yml
crates/aetheris-client-native/: CHANGELOG.md  Cargo.toml  README.md
crates/aetheris-client-native/src/: main.rs
crates/aetheris-client-wasm/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/aetheris-client-wasm/proto/: auth.proto
crates/aetheris-client-wasm/src/: assets.rs  auth.rs  lib.rs  metrics.rs  render.rs  render_primitives.rs  shared_world.rs  smoke_test.rs  transport.rs  transport_mock.rs  world_state.rs
crates/aetheris-client-wasm/src/shaders/: basic.wgsl  debug.wgsl  star_field.wgsl
docs/: ASSET_STREAMING_DESIGN.md  CLIENT_DESIGN.md  INPUT_PIPELINE_DESIGN.md  PLAYGROUND_DESIGN.md  WORKER_COMMUNICATION_DESIGN.md
playground/: PLAYGROUND.md  index.html  package-lock.json  package.json  playground.html  tsconfig.json  vite.config.ts
playground/src/: env.d.ts  game.worker.ts  main.ts  playground.ts  render.worker.ts  shortcuts.ts  world-registry.ts
playground/worlds/aetheris-playground/: world.css
playground/worlds/aetheris-playground/themes/: blueprint-lite.css  blueprint.css  frost-dawn.css
scratch/: gen_test_data.rs
scripts/: check_docs_tiers.py  dev_toggle.py
